--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,14 @@
     border: 1px dashed black;
     width: 20%;
     height: 100%;
+    padding: 5px;
 }
 .content-60{
     border: 1px dashed black;
     width: 60%;
     height: 100%;
     text-align: center;
+    padding: 5px;
 }
 
 #login{
