--- a/css/style.css
+++ b/css/style.css
@@ -91,13 +91,11 @@
     border: 1px dashed black;
 }
 .left{
-    display: flex;
     width: 65%;
     background-color: rgba(8, 57, 148, 0.735);
 }
 
 .right{
-    display: flex;
     width: 35%;
     background-color: rgb(223, 96, 218);
 }
@@ -119,10 +117,13 @@
 
 .conteiner-green{
     width: 75%;
+    margin: 0 auto;
+}
+
+.col-green{
     height: 830px;
     background-color: green;
     border: 1px dashed black;
-    margin: 0 auto;
 }
 /* FINE container green  */
 /* FINE MAIN */
@@ -134,13 +135,11 @@
     border-bottom: 2px solid darkgray;
 }
 .footer-left{
-    display: flex;
     width: 40%;
     background-color: rgba(148, 8, 143, 0.735);
 }
 
 .footer-right{
-    display: flex;
     width: calc(60% / 4);
     background-color: rgba(8, 148, 108, 0.735);
     border: 1px dashed white;
@@ -156,7 +155,6 @@
 
 .row-footer{
     width: 70%;
-    height: 80px;
     margin: 0 auto ;
     display: flex;
     align-self: center;
